sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/BlockStatement.sand
pub class BlockStatement {
    method() {
        {

        }

        {
            use foo.foo;
            use bar.bar;
        }

        {
            a = b;
        }

        {
            use foo.foo;
            use bar.bar;

            a = b;
        }
    }
}