sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/WithElseIfButMissingElse.sand
pub class WithElseIfButMissingElse {
    foo() {
        let a = if let b = c {
            c
        } else if cond {
            c
        };
    }
}